# hubb-assist-mono-fronteback-v1

./: .replit  package-lock.json  package.json  pyproject.toml
attached_assets/: Pasted--GET-https-08fce044-cfda-4863-971b-b69d26c7a26d-00-19b59kd3rb6hz-spock-replit-dev-3000-assets--1748303235590.txt  Pasted--src-context-AuthContext-tsx-import-createContext-useContext-useState-useEffect-ReactNode--1748306603673.txt  Pasted-1-Scaffold-inicial-dos-componentes-Criar-diret-rios-e-arquivos-vazios-bash-Copiar-Editar-mkdir-p--1748301428256.txt  Pasted-Antes-de-qualquer-execu-o-leia-cuidadosamente-o-cen-rio-abaixo-Arquitetura-atual-Aplica-o-mono-1748300663280.txt  Pasted-Aqui-vai-uma-proposta-de-arquitetura-RBAC-Role-Based-Access-Control-para-dividir-esses-cinco-perfi-1748305769803.txt  Pasted-HUBB-Assist-Documenta-o-do-Layout-Vis-o-Geral-O-layout-do-HUBB-Assist-est-bem-modularizado-em--1748296665924.txt  Pasted-Layout-Componentizado-HUBB-Assist-SaaS-Vis-o-Geral-O-HUBB-Assist-SaaS-possui-um-layout-totalment-1748304858786.txt  Pasted-Para-que-o-React-Router-passe-a-renderizar-de-fato-cada-layout-em-vez-de-manter-sempre-o-dashboard-p-1748307180128.txt  Pasted-Perfeito-Vamos-seguir-o-M-todo-1-dashboards-totalmente-separados-Aqui-vai-uma-proposta-de-como-o-1748301292065.txt  Pasted-Por-que-ainda-aparece-o-dashboard-em-tatu-Backend-j-est-servindo-o-SPA-corretamente-recebemos-i-1748310059772.txt  Pasted-Skip-to-content-Files-Commands-Search-Packager-files-Config-files-Started-building-your-app-s-1748298417098.txt  (+2 more)
backend/: simple_main.py
docs/: layout.md
frontend/: index.html  (+4 more)
(+54 files in other folders)
